# fetchapp

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/cpp/: main.cpp  networkmanager.cpp  networkmanager.h
client/cpp/Config/: Config.cpp
client/cpp/Language/: Language.cpp
client/cpp/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
client/cpp/TokenManager/: tokenmanager.cpp  tokenmanager.hpp
client/cpp/UserManager/: UserManager.cpp  UserManager.hpp
client/qml/: Authorize.qml  Login.qml  main.qml  qml.qrc
client/qml/components/: CloseButton.qml  CustomBusyIndicator.qml  SidebarItem.qml  UserInput.qml
client/qml/forms/: ChangePassword.qml  Code.qml  Login.qml  Restore.qml  SignUp.qml  Signup.qml
client/qml/pages/: EgePage.qml  HomePage.qml  SettingsPage.qml
client/qml/scripts/: scripts.js
client/qml/translations/: fetchapp_ru.ts  translations.hpp
client/tests/: CMakeLists.txt  main.cpp  tokenmanager_test.cpp  usermanager_test.cpp
cpp/: main.cpp
cpp/Config/: Config.cpp  Config.hpp
cpp/Language/: Language.cpp  Language.hpp
cpp/UserManager/: UserManager.cpp  UserManager.hpp
qml/: Authorize.qml  main.qml  qml.qrc
qml/components/: CustomBusyIndicator.qml  CustomButton.qml  SidebarItem.qml
qml/forms/: ChangePassword.qml  Code.qml  Login.qml  Restore.qml  colors.js
qml/pages/: EgePage.qml  HomePage.qml  SettingsPage.qml
qml/scripts/: constants.js
qml/translations/: fetchapp_ru.ts  update.sh
server/: go.mod  go.sum  main.go
server/cmd/: main.go
server/config/: config.go
server/internal/app/: app.go
server/internal/application/: app.go
server/internal/auth/: auth.go  auth_test.go
server/internal/database/models/: models.go
server/internal/handler/: handler.go  middleware.go  request.go  responce.go
server/internal/services/auth/: auth.go  auth_test.go  helpers.go  middlewares.go  middlewares_test.go  requests.go  responces.go  responses.go  service.go
server/internal/services/ege/: helpers.go  requests.go  responses.go  service.go
server/internal/services/ege/python/: main.py
server/internal/services/ege/python/scripts/: __init__.py  solver.py  types.py  util.py
server/pkg/handlers/: handlers.go
server/pkg/helpers/: helpers.go
server/pkg/middlewares/: middlewares.go
server/pkg/responces/: responces.go
server/pkg/responses/: responses.go
tests/: CMakeLists.txt  usermanager_test.cpp
translations/: fetchapp_ru.ts  translations.hpp  translations.qrc  update.sh
